--- a/index.html
+++ b/index.html
@@ -8,16 +8,25 @@
   </head>
   <body>
     <div class="container">
-      <div class="data-container">
-        <h3>Score: <span class="score">0</span></h3>
-        <h3>Moves: <span class="moves">0</span></h3>
-        <h3>Timer: <span class="timer">0</span></h3>
+      <div class="difficulty-container">
+        <button class="button" id="easy">Easy</button>
+        <button class="button" id="medium">Medium</button>
+        <button class="button" id="hard">Hard</button>
       </div>
-      <div class="button-box">
-        <button class="button start">Start</button>
-        <button class="button restart">Restart</button>
+      <div class="inner-container hidden">
+        <div class="data-container">
+          <h3>Score: <span class="score">0</span></h3>
+          <h3>Moves: <span class="moves">0</span></h3>
+          <h3>Timer: <span class="timer">0</span></h3>
+        </div>
+        <div class="button-box">
+          <button class="button restart">Restart</button>
+        </div>
+        <div class="game-area"></div>
       </div>
-      <div class="game-area"></div>
+      <div class="result-box hidden">
+        <h2 class="results"></h2>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
